/*
 * Copyright 2020 Amazon.com, Inc. or its affiliates. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License").
 * You may not use this file except in compliance with the License.
 * A copy of the License is located at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * or in the "license" file accompanying this file. This file is distributed
 * on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
 * express or implied. See the License for the specific language governing
 * permissions and limitations under the License.
 */

import React from 'react';
import { render } from '@testing-library/react';
import { TimeRange } from '../TimeRange';
import { Formik } from 'formik';

describe('<TimeRange /> spec', () => {
  test('renders the component (loading state)', () => {
    const { container } = render(
      <Formik
        initialValues={{ startTime: 0, endTime: 100 }}
        onSubmit={jest.fn()}
      >
        {() => (
          <div>
            <TimeRange isLoading={true} />
          </div>
        )}
      </Formik>
    );
    expect(container.firstChild).toMatchSnapshot();
  });
  test('renders the component', () => {
    const { container } = render(
      <Formik
        initialValues={{ startTime: 0, endTime: 100 }}
        onSubmit={jest.fn()}
      >
        {() => (
          <div>
            <TimeRange isLoading={false} />
          </div>
        )}
      </Formik>
    );
    expect(container.firstChild).toMatchSnapshot();
  });
});
